--- a/Contenido/prueeeeeeeba.css
+++ b/Contenido/prueeeeeeeba.css
@@ -176,7 +176,7 @@ body {
 
   /* Sección del Hábito 3 */
 #habito3 {
-  background: linear-gradient(to right, #1f2937, #4b5563); /* Fondo oscuro con degradado */
+  background: linear-gradient(to right, #1f2937, #087660); /* Fondo oscuro con degradado */
   color: #f9f9f9; /* Texto claro */
   padding: 40px 20px;
 }
@@ -186,6 +186,7 @@ body {
   font-size: 2.5rem;
   color: #00ffcc; /* Tono vibrante */
   margin-bottom: 30px;
+  width: 300px;
 }
 
 /* Contenedor principal */
@@ -193,7 +194,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   align-items: flex-start;
 }
@@ -499,3 +500,85 @@ body {
     padding: 10px;
   }
   
+
+/* Estilos para la barra de anuncio */
+.announcement-bar {
+  background: url('coffe.jpg') no-repeat center center/cover;
+  color: white;
+  font-size: 1rem;
+  padding: 10px 20px;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid #00ffcc;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.announcement-bar a {
+  color: #fffbe6;
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.announcement-bar a:hover {
+  text-decoration: none;
+  color: #ffeb3b;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.close-btn:hover {
+  transform: scale(1.2);
+  color: #00ffcc;
+}
+
+/* Contenedor principal del slider */
+.image-slider {
+  width: 90%;
+  overflow: hidden;
+  position: relative;
+  height: 150px;
+  margin-top: 100px;
+  background: #333333a4;
+  margin-left: 50px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Pista deslizante */
+.slider-track {
+  display: flex;
+  width: calc(6 * 200px); /* Ajustar según el número de imágenes y su tamaño */
+  animation: scroll 12s linear infinite;
+}
+
+/* Imágenes del slider */
+.slider-track img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  margin-right: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+/* Animación de desplazamiento */
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
